# loganalytics_prometheus

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: main.yaml
loganalytics_prometheus/: __init__.py  settings.py
